--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,15 @@ spring.application.name=CarLocation
 spring.datasource.url=jdbc:mysql://localhost:3306/vehiclelocation?useSSL=false&serverTimezone=UTC
 spring.datasource.username=Hamtidiane
 spring.datasource.password=Despreslecoco10@
-
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui-custom.html
 # Hibernate properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+#Swagger
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+#Eureka
+eureka.client.serviceUrl.defaultZone=http://192.168.1.248:9102/eureka/
