--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,4 @@ spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 #Eureka
 eureka.client.serviceUrl.defaultZone=http://192.168.1.248:9102/eureka/
+server.port=8082
